fix DT-1998, change text colour in input fields so it's visible

--- a/less/forms-and-buttons.less
+++ b/less/forms-and-buttons.less
@@ -13,6 +13,7 @@ textarea,
     -webkit-border-radius: 0;
        -moz-border-radius: 0;
             border-radius: 0;
+color: @color-swatch1;
 }
 
 
